--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -2,7 +2,7 @@
         <hr>
         {% for message in room_messages %}
             <div>
-                <small>@{{message.user}}    {{message.created|timesince}} ago</small>
+                <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a>    {{message.created|timesince}} ago</small>
                 <small>messaged in "{{message.room}}"</small>
 
                 <p>{{message}}</p>
